--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:sqlserver://192.168.0.25:1433;databaseName=test
+spring.datasource.url=jdbc:sqlserver://192.168.0.25:1433;databaseName=backend
 spring.datasource.username=backend
 spring.datasource.password=test
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
 
 
